# A-shares-agent

./: .git-safe-ops.json  .gitignore  README.md  pyproject.toml  skills-lock.json
configs/: app.yaml  premarket.yaml  rag.premarket.yaml  risk.paper.yaml  strategy_registry.yaml  symbols.watchlist.yaml
docs/architecture/: agent-boundaries.md
scripts/: __init__.py  run_api.py  run_intraday_agent.py  run_paper_broker.py  run_premarket_agent.py  run_review_agent.py  run_risk_gateway.py
tests/frontend/: test_console_information_architecture.py  test_premarket_debug_tab.py
tests/intraday/: test_intraday_analysis.py  test_premarket_context.py  test_theme_linkage.py
tests/knowledge/: test_knowledge_store.py
tests/observability/: test_decision_trace_and_rag_api.py  test_event_bus.py  test_intraday_analysis_api.py  test_observability_api.py  test_risk_approval_api.py  test_traces_metrics.py
tests/premarket/: test_event_clusterer.py  test_instruction_builder.py  test_premarket_context_api.py  test_premarket_debug_api.py  test_premarket_integration.py  test_premarket_provider_config.py  test_social_news_providers.py  test_theme_and_risk_builders.py  test_trading_calendar.py
tests/premarket_rag/: test_evidence_pack_builder.py  test_premarket_agent_rag_integration.py  test_premarket_rag_service.py  test_qdrant_vector_store.py  test_query_planner_retrievers.py  test_rag_config.py  test_rag_evaluation_api.py  test_rag_indexing_pipeline.py  (+1 more)
trading_agent_system/: __init__.py  schemas.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: api.js  (+4 more)
(+109 files in other folders)
